# vs_code_local_spark_dev

./: .env  .gitignore  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml  minio_env
.devcontainer/conf/: core-site.xml  log4j2.properties  spark-defaults.conf  spark-env.sh
.devcontainer/scripts/: .bashrc  run.sh  start_history_server.sh  start_master.sh  start_worker.sh
.devcontainer/spark-conf/: hive-site.xml  log4j2.properties  spark-defaults.conf
.notebooks/: analise_futebol.ipynb  bronze_to_silver.ipynb  particoes.ipynb  particoes_parquet.ipynb  read_minio.ipynb  test_minio.ipynb  test_moto.ipynb  test_repartition.ipynb
app_name/configs/: spark_helper.py
app_name/jobs/: audit_bronze_to_silver.py  despesas_bronze_to_silver.py  general_etl.py  main.py  us_legislators.py
modelagem/: entidades_mapeadas  particionamentos  perguntas
tests/: SchemaTests.ipynb  conftest.py  constants.py  spark_fixtures.py  utils.py
tests/jobs/: test_us_legislators.py
